docs/versions/0.12.1/website/src/content/docs/workflows.mdx
---
title: Workflows
description: Define multi-agent kvdags, run every node as a Karvex-managed teammate, and watch execution live in the DAG view.
---

A workflow is a saved, versioned **kvdag**: a directed acyclic graph of nodes, each one a task, connected by edges that pass results between them. Running a workflow spawns every node as a real terminal pane — usually a `claude` teammate — and coordinates them until every branch resolves.

Workflows are for multi-step, multi-agent work you want to define once and run repeatedly, like plan → implement → review. For one-off scripted coordination between agents you already have running, see [Agent automation](/docs/agent-automation/) instead.

## What a workflow is

A **workflow** is a named container for one or more **kvdag versions** — immutable graph definitions. `kvx workflow create` makes the first version; `kvx workflow update` authors a new version on top of it. Editing never mutates a version in place; it always produces a new one, so a past run stays reproducible against the version it actually ran.

A **run** takes one kvdag version, fills its declared run arguments, and executes the graph. Each node becomes a **run node** — an instance with its own status, model/effort assignment, pane binding, and result. Nodes start as soon as every inbound edge resolves, and independent nodes run in parallel up to the configured concurrency limit. A conditional edge whose condition evaluates false is dead; a node all of whose inbound edges are dead becomes `skipped` rather than blocking the rest of the graph — this is how a workflow branches without a scripting language.

A run only finishes once every node has resolved and recorded what happens next, not simply once nothing is left to schedule. If a node ends without a successor edge resolved, a blocker recorded, or explicit evidence that nothing follows, the run pauses and names the exact node responsible instead of silently reporting success.

## Definition format

`kvx workflow create` and `kvx workflow update` read a definition document in TOML or JSON — the file extension selects the format. TOML is the easier one to hand-edit:

```toml
name = "ship-feature"
description = "plan → implement → review"
contract = """
Reply only through result.json. Never edit files outside your node dir unless the task says so.
"""
max_depth = 3
max_nodes = 24

# Declared run-argument namespace. Without this, `{{goal}}` below has no inbound
# edge port to resolve against and workflow.create rejects the document.
[[arg]]
name = "goal"
required = true
description = "what to build"

[[node]]
key = "plan"
label = "Plan"
kind = "agent"
runner = "agent"          # `claude` teammate; "command" runs `command` as a plain process
demand = "critical"
prompt_template = "Produce an implementation plan for: {{goal}}"
output_schema = { type = "object", required = ["plan"], properties = { plan = { type = "string" } } }

[[node]]
key = "implement"
label = "Implement"
kind = "agent"
demand = "peak"
prompt_template = "Implement this plan:\n{{plan}}"
output_schema = { type = "object", required = ["changed_files","report"], properties = { changed_files = { type = "array" }, report = { type = "string" } } }

[[edge]]
from = "plan"
to = "implement"
kind = "data"
payload = "summary"
port = "plan"
```

`contract` is prepended to every node's system prompt — put cross-cutting rules here instead of repeating them per node.

`max_depth` and `max_nodes` are the run's growth ceiling, and they bind because a node can propose new nodes while the run is executing — see Templates and expansion, below. `max_nodes` (default `24`) counts every node the run has materialised regardless of how it ended: a failed or skipped child does not hand its budget back, so a node cannot fan out forever by failing. `max_depth` (default `3`) counts *generations of expansion*, not graph layers — every node written in the document is depth 0, a child proposed by one of them is depth 1, so `max_depth = 3` permits three generations. The run's tier narrows both further; see Tiers and growth ceilings, below.

`default_tier` (`auto`, `max`, `high`, `medium`, or `low`; default `high`) is the tier runs of this workflow start at when `kvx workflow run start` is given no `--tier`. It is a document-level key like `name` and `contract`, so changing it means authoring a new version.

Each `[[arg]]` declares one entry in the run-argument namespace, filled at run time with `--arg name=value`. Every `{{name}}` placeholder in a `prompt_template` must resolve to either a declared arg or an inbound edge `port` — `workflow.create` rejects a document with an unresolved placeholder before it is ever run, and starting a run separately rejects a missing required arg that has no default.

Each `[[node]]` needs a unique `key`, a `label`, a `prompt_template`, and an `output_schema` — a JSON Schema the node's result must validate against before it can succeed. Omit `output_schema` and the node gets the empty schema `{}` (accepts any object) rather than a rejected document; declare it explicitly once you know the shape you want validated. `kind` defaults to `"agent"`; the other kinds (`internal`, `gate`, `monitor`) are accepted today but their scheduling behavior ships in a later release. `runner` selects how the node's process is bound — see Node runners, below. `demand` (`peak`, `critical`, `standard`, or `light`, default `standard`) feeds the run's tier into a per-node model and effort assignment.

Each `[[edge]]` connects a `from` node to a `to` node and needs a `kind`: `sequence` (source must succeed), `data` (source must succeed *and* its result validate), or `conditional` (evaluates a `condition` against the source's result; false makes the edge dead). Omit `kind` and the edge defaults to `sequence`. A `conditional` edge must declare a `condition` — one with none is rejected at authoring time rather than accepted and silently never resolving. `payload` controls how much of the source's checkpoint the target receives: `none`, `summary` (default), or `full`. `port` names the `{{slot}}` in the target's `prompt_template` that the edge's payload fills; a `port` that names no `{{slot}}` actually present in the target's `prompt_template` is also rejected at authoring time, since it would otherwise produce a workflow whose data silently goes nowhere.

Run it with the declared args:

```bash
kvx workflow run start ship-feature --arg goal="add dark mode"
```

To hand-edit a saved workflow, run `kvx workflow update` with a new definition file. That authors a new kvdag version rather than mutating the one you started from, so every past run stays reproducible against the version it actually ran.

## Node runners

`runner` selects how a node's process is bound, independent of `kind`:

| `runner` | Process | Confirmation | Steering | Completion |
| --- | --- | --- | --- | --- |
| `agent` (default) | `claude` in a pane, launched with the run's resolved model and effort | must come up as a detected agent inside the launch window, or the spawn fails outright | delivered through the same verified path as `agent.prompt` | any of the three signals in The node contract, below |
| `command` | the node's own `command` argv, run as a plain process | none — the pane is just a process that started | delivered as raw pane text | self-report only |

A `command` node needs `command = ["...", ...]` — an argv list, never a shell string. It gets the same `KARVEX_WORKFLOW_*` environment as an `agent` node, so it can call `kvx workflow node complete` the same way, but it has no turn-end hook and no screen detection: the only thing that finishes it is the node reporting itself.

## Templates and expansion

Some work only reveals its shape once it starts: you know you want one node per shard, but not how many shards there are until something has looked. A node can therefore ask for new nodes while it runs. It cannot create them — **it proposes, and Karvex decides** — which is what keeps the graph's growth ceiling a ceiling rather than a suggestion.

Expansion has two halves in the definition. A **template** is a node marked `is_template = true`: it is never scheduled directly and does not appear in a run until something instantiates it. A node that may instantiate templates declares which ones, and how many children it may create in total:

```toml
[[node]]
key = "fanout"
label = "Fan out"
prompt_template = "Split this into shards: {{goal}}"
output_schema = { type = "object", required = ["plan"], properties = { plan = { type = "string" } } }
expand_allow = ["worker"]   # which templates this node may instantiate
expand_max = 8              # how many children it may create in this run, in total

[[node]]
key = "worker"
label = "Worker"
is_template = true
prompt_template = "Work one shard of: {{goal}}"
output_schema = { type = "object", required = ["report"], properties = { report = { type = "string" } } }

[[node]]
key = "collect"
label = "Collect"
prompt_template = "Collect the shard reports:\n{{shard}}"
output_schema = { type = "object", required = ["report"], properties = { report = { type = "string" } } }

# The fan-in edge is drawn from `fanout`, not from `worker`.
[[edge]]
from = "fanout"
to = "collect"
kind = "data"
payload = "summary"
port = "shard"
```

`expand_max` defaults to `0`, so expansion is opt-in per node, and it counts cumulatively across every proposal that node makes in the run rather than per proposal. `expand_allow` is checked at authoring time: a key naming a node that does not exist, or one that is not a template, is rejected by `workflow.create`.

Draw the fan-in edge **from the proposing node**, as above. A template's own edges are dropped when the run graph is built, so a node reachable only through a template is rejected at authoring time as unreachable. What connects the children instead is inheritance: every accepted child gets a copy of its parent's outbound edges, so each `worker` also gets an edge into `collect`, and `collect` waits for the whole generation rather than for `fanout` alone. A template's `{{slot}}`s therefore have to resolve to declared run args, since it has no inbound edge ports of its own.

Inheritance means more than one child's edge can settle on the same port of the same downstream node — the fan-in case above has every `worker` landing on `collect`'s `shard` port. A port is therefore a **list of contributions**, never one payload. A port with exactly one settled edge is unchanged: `inputs/<port>.json` is that payload and the `{{slot}}` renders it exactly as it always has. Once several edges settle on one port, each contributor gets its own file at `inputs/<port>/<source>.json`, `inputs/<port>.json` becomes the ordered index of them (`[{from, label, file, payload}, …]` in child-creation order), and the `{{slot}}` renders one attributed block per contribution:

```text
[from fanout/worker/1 · Shard 1]
auth shard reviewed, two findings

[from fanout/worker/2 · Shard 2]
ui shard reviewed, no findings
```

So `collect`'s `{{shard}}` sees every `worker`'s report and knows whose is whose, rather than the last child to finish silently overwriting the rest.

A node proposes from inside its own pane, before it completes:

```bash
kvx workflow node expand <run_id> <path> --template worker --label "Shard" --count 4
kvx workflow node expand <run_id> <path> --template worker --label "Shard" --input goal="just src/ui" --json
```

Like `node complete`, it reads `KARVEX_WORKFLOW_NODE_TOKEN` from the node's own environment, so a node can only propose on its own behalf. `--count` defaults to 1. `--input KEY=VALUE` overrides one `{{slot}}` in the template's `prompt_template` for the children this proposal creates; a key naming no declared slot is refused rather than quietly ignored, so the dynamic channel stays strictly narrower than the authored one. The override beats a run argument of the same name, and it is filled into the child's own `task.md` — which is what lets one parent give each child different work. `--label` names the children this proposal creates: it is the title of their `task.md`, their box in the DAG view, their pane title, and their `claude --name`. Each child gets the instance path `<parent>/<template>/<n>` — `fanout/worker/1`, `fanout/worker/2` — numbered from 1 per parent and template, and starts only once its parent has settled.

One proposal describes one batch, so `--count 4` creates four children that share its label and its overrides. To fan out into differently-tasked children, make one proposal per child:

```bash
kvx workflow node expand "$KARVEX_WORKFLOW_RUN_ID" "$KARVEX_WORKFLOW_NODE_PATH" \
  --template worker --label "Shard 1" --input goal="just src/auth"
kvx workflow node expand "$KARVEX_WORKFLOW_RUN_ID" "$KARVEX_WORKFLOW_NODE_PATH" \
  --template worker --label "Shard 2" --input goal="just src/ui"
```

A proposal is judged against four guardrails, in order: the proposing node's `expand_allow`, its `expand_max`, the run's `max_depth`, and the run's `max_nodes`.

:::note[A refusal is never silent]
If a proposal for four children only has room for two, **two are created and the shortfall is reported**. Accepting all four would break the ceiling; refusing all four would waste the room that was there. Partial acceptance is only legitimate because the truncation is reported, so it is reported on every surface that describes the run:

| Surface | What it carries |
| --- | --- |
| `workflow.growth.limited` on the JSON API event stream | the proposing node, the template, which guardrail, that guardrail's value, and the requested/accepted counts |
| `kvx workflow run show` | the run's current growth state and which guardrail was last hit, without the requested/accepted counts — see Commands, below |
| `kvx workflow node show` | the proposing node's own last rejection: the guardrail, its value, and the requested/accepted counts |
| The DAG view | a banner across the run, and a notice on the node that proposed, both with the requested/accepted counts |
| A notice toast | the same message, if notices are enabled in `config.toml` |
:::

The response to `kvx workflow node expand` carries the same verdict back to the node that asked, so it learns exactly what it got. A refused proposal is a **successful** command, not an error: only a bad run, path, or token — or a run that has already closed — exits non-zero. A node that has already finished cannot propose, since its children would hang off an edge from a node that has already settled.

## Tiers and growth ceilings

A run's **tier** is the one dial for how expensive it is allowed to be. It picks each node's model and reasoning effort, together with that node's `demand`, and it narrows how far the graph may grow. There are two places to set it, most specific first:

```bash
kvx workflow run start ship-feature --tier low   # this run only
```

```toml
default_tier = "medium"                          # every run of this workflow
```

`auto`, `max`, and `high` leave the document's ceilings alone; `medium` and `low` narrow them:

| Tier | Effective `max_nodes` | Effective `max_depth` | Models |
| --- | --- | --- | --- |
| `max` | as authored | as authored | the strongest model at `peak` demand, opus otherwise, at `max` effort throughout |
| `high` (default) | as authored | as authored | opus, dropping to sonnet at `light` demand |
| `auto` | as authored | as authored | chosen per node from that node's own history, starting from the `high` row |
| `medium` | at most 24 | as authored | opus at `peak`/`critical`, sonnet otherwise |
| `low` | at most 12 | as authored | sonnet at every demand, `low` effort throughout |

The narrowing only ever tightens: a tier cannot raise a ceiling the document set lower, and running the same workflow at `low` twice gives the same limits both times. What the run enforces is what `kvx workflow run show` and the JSON API report — its `limits:` line, below — so a run's growth ceiling never contradicts its own record.

## The node contract

Every node runs inside its own directory, `<run dir>/<instance path>/`:

| File | Written by | Contents |
| --- | --- | --- |
| `task.md` | Karvex | rendered prompt: workflow contract, node role, task, and the paths of any `inputs/` files |
| `inputs/<port>.json` | Karvex | upstream checkpoint payloads, one file per inbound edge port; a port with more than one settled edge (fan-in from expansion) holds the ordered index of its contributions |
| `inputs/<port>/<source>.json` | Karvex | one file per contributor, named after the contributing node's instance path — written only for a fanned-in port |
| `output_schema.json` | Karvex | the JSON Schema `result.json` must satisfy |
| `result.json` | the node | its structured result |
| `artifacts/` | the node | files referenced from `result.json`'s `artifacts` array |

Finish a node by writing `result.json` and running:

```bash
kvx workflow node complete
kvx workflow node complete --result-file <path>   # defaults to ./result.json in the node directory
```

It reads `KARVEX_WORKFLOW_RUN_ID`, `KARVEX_WORKFLOW_NODE_PATH`, `KARVEX_WORKFLOW_NODE_DIR`, and `KARVEX_WORKFLOW_NODE_TOKEN` from the environment already set on the node's pane, so the command takes no positional arguments. Give `result.json` a `summary` string — it is what downstream nodes and run history see — and, for anything too large to inline, an `artifacts` array of paths under `./artifacts/`.

This self-report is the strongest of three completion signals, in precedence order:

| Precedence | Signal | Applies to | Recorded as |
| --- | --- | --- | --- |
| 1 | Self-report — the node calls `kvx workflow node complete` | `agent` and `command` nodes | `self_report` |
| 2 | Turn end — the bundled Claude hook reports the pane's turn ended, then Karvex reads `result.json` | `agent` nodes only | `hook` |
| 3 | Detection — the pane reads idle for several consecutive checks and a valid `result.json` exists | `agent` nodes only | `detection` |

:::caution[Idle is never enough on its own]
A node whose pane goes idle without ever producing a `result.json` that validates against `output_schema.json` does not complete. It moves to `needs_attention` instead, and the run does not report success while it sits there. Always finish through `kvx workflow node complete`, or make sure the last thing your agent does is write a valid result.
:::

An invalid result gets one automatic corrective re-prompt quoting the schema errors; still invalid, and the node moves to `needs_attention` the same way.

:::caution[`maxLength` is enforced from 0.12.0]
The schema subset Karvex validates `result.json` against — `type`, `required`, `properties`, `items` — now also enforces `maxLength` on strings. A result whose string field is longer than the `maxLength` its `output_schema` declares now fails validation, gets the one corrective re-prompt, and then moves to `needs_attention`, where earlier releases accepted it. If one of your nodes declares a `maxLength` it never really meant, drop it from the schema rather than letting the node fail on it.
:::

## Run history and summaries

Every finished run — succeeded **or** failed — gets an end-of-run **summary**: a short, budgeted account of what the run did, written by a real summariser node you can watch, and readable long after the run's panes are gone.

The summariser is an **epilogue**, not part of the graph. It starts only once the run's terminal status has already been decided, so it can never change it. `workflow.run.finished` fires exactly when it always did; the summariser then runs as a visible pane under the reserved instance path `.summary`; and `workflow.run.summarized` follows when the summary lands. Every way the summariser can fail — output that fails its schema twice, a spawn failure, a pane that died, a cancelled run, summaries switched off — converges on the same outcome: the failure is journalled, you get one notice, the pane closes, and **the run's own status is untouched**. A run with no summary is a normal run, and `kvx workflow summary show` saying there is none is a normal answer, not an error.

The `.summary` node is excluded from `nodes_total` and `nodes_done`, which count the run's declared work: those counts read complete at the instant the run reports finished, and the summariser is still visible in the graph beside them.

:::note[What clients may assume]
`workflow.run.finished` is the durable terminal signal — safe to script against for "the run is over and its outcome will not change". Wait for `workflow.run.summarized` only when you want the summary's content. Two consequences for anything reading the event stream: clients must tolerate reserved-node (`.`-prefixed) events arriving after `run.finished`, and `workflow.run.summarized` remains the only run-level follow-up — there is no second `run.finished` and no `run.updated` for the summary.

Karvex executes one run at a time, and the epilogue is part of that run: between `run.finished` and the summary resolving, starting the next run may answer `workflow_run_in_flight`. That refusal is retryable — the message names the pending summary, and the next run starts once the summariser has finished or given up.
:::

A new run of the same workflow is given the most recent summaries as **context**, so it can start from what the last runs left open:

```bash
kvx workflow run start ship-feature --arg goal="add dark mode"                     # reads prior summaries
kvx workflow run start ship-feature --arg goal="add dark mode" --no-prior-summaries # ignores them
```

The summaries are a pointer, not a payload. The run gets one file — `<run dir>/context/prior-runs.md`, one section per prior run with its outcome, text, highlights, and open gaps — and every node's `task.md` gets a two-line `## Prior runs` section naming that path and saying to read it if the task benefits from history. A node that does not need history pays two lines of prompt rather than several thousand characters, and a run with no history renders its `task.md` exactly as it did before this existed. Which runs a run was given is recorded on the run itself (`context_runs` on the JSON API).

Read summaries back with:

```bash
kvx workflow summary show <run_id> [--json]
kvx workflow summary list [<name|id>] [--limit N] [--json]
```

`summary show` prints the outcome, the summary text, highlights, open gaps, and one line per node. `summary list` is newest-first across a workflow, or across every workflow when given no target, and marks a row `(pruned)` when only the summary survives — see below.

Three `[workflow]` config keys govern all of this: `summary_enabled` (default `true`) turns the summariser off entirely — off means no summariser node is created at all, not one that runs and discards its output; `history_context_runs` (default `3`) is how many prior summaries a run is offered, where `0` disables the injection without disabling summaries; and `retention_runs` (default `50`) is how many runs are kept per workflow.

**Pruned runs.** Once a workflow has more than `retention_runs` runs, the oldest are pruned whole: the run, its nodes, its checkpoints, and its journal go, and **the summary stays**. A pruned run therefore still appears in `kvx workflow summary list` — flagged `run_pruned` — and in the run browser, while `kvx workflow run show` and restore both refuse it with `workflow_run_pruned`, whose message points at `kvx workflow summary show` as the surface that survived. Pruning happens after a run closes and its summary resolves, never on a read path: opening the run browser never deletes anything.

:::note[Testing and scripting]
`KARVEX_WORKFLOW_SUMMARY_COMMAND` binds the summariser to a command of your own instead of `claude`, as a JSON array of argv strings (`["/usr/bin/env","python3","summarise.py"]`). It is a declared binding override, not a debug hook: the summariser then behaves like any `command` node — it reads its `task.md`, writes `result.json`, and calls `kvx workflow node complete`. A value that is not a JSON array of strings switches summaries off for that server and says so on the first run that would have summarised, rather than silently running `claude` instead. `KARVEX_WORKFLOW_DB_PATH` points the workflow database somewhere other than the default, which is what keeps a test's runs out of your real history.
:::

## Restoring from a past run

A run can start with some of its nodes already done, seeded from a past run's checkpoints instead of executed again:

```bash
kvx workflow run start ship-feature --arg goal="add dark mode" --restore-from <run_id>
kvx workflow run start ship-feature --arg goal="add dark mode" --restore-from <run_id> --restore plan
kvx workflow run start ship-feature --arg goal="add dark mode" --restore-from <run_id> --restore plan --restore-allow-changed
```

Bare `--restore-from` means *every restorable node* of that run — the common case, "re-run this, keeping what succeeded". Repeat `--restore` to narrow it to named nodes.

A restored node is `restored`: it has the source run's result, it fires its outbound edges exactly like a succeeded node — so downstream nodes receive the source run's payload — and **it never gets a pane**, because nothing runs. Its timestamps are the restore instant, not the source run's, so the new run's timeline stays honest; its provenance (source run, node key, checkpoint) is on `kvx workflow node show`, the JSON API, and the DAG view's detail strip.

Whether a node *can* be restored is decided per node, by comparing the source version's node against the target version's on two things: its `prompt_template` and its `output_schema`. Equal on both, and the checkpoint still describes the same work; different, and it does not. So restoring into an edited workflow works, and only the nodes you actually changed re-run.

Starting a run with `--restore-from` is a **successful start that carries a report**, never an error — every node is either restored or skipped with a reason:

| Skip reason | Meaning | Bypass |
| --- | --- | --- |
| `definition_changed` | the node's `prompt_template` or `output_schema` differs from the source version's | `--restore-allow-changed` |
| `no_checkpoint` | the node has no validated result checkpoint in the source run | none |
| `payload_truncated` | the checkpoint's payload was over the store's size budget and was not kept | none |

The human output prints both sets — `restored: plan, implement · skipped: review (definition changed)` — so a bare `--restore-from` is never silent about what it did not restore.

Two things are refused rather than reported: a `--restore` selector naming no node in the target version fails with `workflow_restore_unknown_selector` and creates no run at all, since a typo must not quietly re-run a node you believed restored; and a source run that has been pruned fails with `workflow_run_pruned`, since only its summary survives and a summary is not a checkpoint.

## Interrogating a past node

When a node has finished, its work is in its result — but the reasoning behind it is in its Claude session. Interrogation revives that session so you can ask:

```bash
kvx workflow node interrogate <run_id> <path> [--reconstructed] [--note <text>] [--json]
```

This forks the node's session (`claude --resume <session> --fork-session`) into a new pane, in the directory the node ran in. **The source transcript is never modified** — a fork writes its own — so the run's record stays exactly as it was, and you can interrogate the same node again later. The pane is titled `interrogate · <workflow> · <path>`, and it holds no node token: an interrogation cannot report, complete, or expand anything on the original node's behalf.

Interrogations are not run nodes. They do not appear in the graph, do not count toward any total, and do not change the run — they are their own record, listed in the DAG view's own lane, with their own start and end times.

When the session cannot be revived — the node ran as a `command` and never had one, the transcript file is gone, or its working directory no longer exists — you get `workflow_transcript_unavailable` naming which of those it was, and **no pane is created**. A refusal is never a pane that quietly does nothing. From there the degraded path is explicit: `--reconstructed` (`Shift+I` in the DAG view) seeds a *fresh* session from the node's stored checkpoint and its original task, in a pane labelled `reconstructed`, whose first instruction says it is a reconstruction from stored outputs and not the original teammate. It is offered, never substituted.

The other answers you can get: `workflow_interrogation_active` — one live interrogation per node at a time, so close the open one first (sequential re-interrogation is fine, and each is its own record); `workflow_interrogation_spawn_failed` — the session was resumable but the pane could not be created, so nothing was recorded; and `workflow_run_pruned` — the run's history is gone, and a summary cannot be interrogated.

Interrogating a node of a run you are viewing from history adds it to that run's stored record immediately; the DAG view's interrogation lane shows it once the historical snapshot is reloaded.

## Commands

`kvx workflow` also appears in `kvx --help`'s command list. Every `kvx workflow` command prints human-readable text by default and takes `--json` for the machine-readable envelope instead — including `run cancel`, `run list`, `node steer`, `node interrupt`, `node restart`, and `workflow list`, which did not accept the flag before 0.12.0. Under `--json` a refusal prints the raw error envelope rather than the humanized message; the exit code is the same either way. The one exception is `node complete`, the node-side reporting verb, whose contract is its exit code and its environment rather than an output envelope.

```bash
kvx workflow list
kvx workflow show <name|id> [--json]
kvx workflow create --file <definition.toml|json> [--name <name>] [--json]
kvx workflow update <name|id> --file <definition.toml|json> [--change-summary <text>] [--json]
```

`create` and `update` read the definition document described above from `--file`; the extension selects TOML or JSON. `update` authors a new kvdag version rather than editing the current one — unless the definition is byte-for-byte equivalent to the current head version, in which case nothing new is created and the human output says `(unchanged — this definition matches the current version; no new version was created)` instead of claiming a version was created. The human default for `show` renders the workflow summary, its version history with formatted timestamps, and the head version's nodes (key, label, runner, demand), edges (from/to/kind/port), and declared args — everything you need to find a node's `<path>` for `node show`/`steer`/`restart` or an `--arg` name for `run start`, without going back to the original definition file.

```bash
kvx workflow run start <name|id> [--tier auto|max|high|medium|low] [--arg KEY=VALUE]...
                                 [--restore-from <run_id>] [--restore <selector>]...
                                 [--restore-allow-changed] [--no-prior-summaries] [--json]
kvx workflow run list <name|id> [--limit N] [--json]
kvx workflow run show <run_id> [--json]
kvx workflow run cancel <run_id> [--json]
kvx workflow summary show <run_id> [--json]
kvx workflow summary list [<name|id>] [--limit N] [--json]
```

From the Karvex TUI, `prefix+f` opens the **workflow launcher** instead: a modal listing the saved workflows, one input line per required argument of the selected one, and a tier row seeded from that workflow's own `default_tier`. `Enter` starts the run, `Esc` closes it, and every row is clickable. Rebind it with `keys.open_workflow_launcher`.

`run` is a namespace, not a workflow selector: `start`, `list`, `show`, and `cancel` each take their own arguments, so a workflow can be named `list` without colliding with the subcommand. `--tier` defaults to the workflow's own `default_tier`; repeat `--arg` for every declared run argument — an `--arg` key the workflow never declared is rejected before the run starts, naming every key that *is* declared, rather than being silently dropped. `run cancel` cancels the run's remaining nodes and closes their panes; a run reaching `succeeded` does **not** close its nodes' panes on its own — they stay open so you can read a teammate's final output or keep talking to it. `run cancel` is what tears panes down, and `node restart` (below) tears down just the one node's pane before respawning it.

The human default for `run show` always prints a `limits:` line naming the run's enforced ceilings — `limits:  max_nodes=12 · max_depth=3` — right after `tier:`, so what the run enforces is never only in `--json`. It also names the node responsible when the run is `paused` or a node is stuck: the `status` line reads `paused (node "lint": needs_attention)`, followed by that node's `blocked:`/`reason:`/`resume:` lines carrying its blocker reason and resume condition, and then every node's path, status, and label — an expansion child's label is its accepted `--label`, which is the only thing that tells one child of a generation from another, since they all share the template's key. When the run has ever hit a growth guardrail it also prints a `growth:` line reporting the run's current growth state and which guardrail was last hit — `growth:  3 of 12 nodes · limited: max_nodes reached at 14:22 UTC` — not the requested/accepted counts for that rejection; those are on `kvx workflow node show`, below, and in the DAG banner. Times are always rendered in `UTC`, named explicitly so a terminal in a different timezone cannot misread the clock as local time.

```bash
kvx workflow node show <run_id> <path> [--json]
kvx workflow node steer <run_id> <path> <text> [--json]
kvx workflow node interrupt <run_id> <path> [--json]
kvx workflow node restart <run_id> <path> [--json]
kvx workflow node complete [--result-file <path>]
kvx workflow node expand <run_id> <path> --template <key> --label <text> [--input KEY=VALUE]... [--count N] [--json]
kvx workflow node interrogate <run_id> <path> [--reconstructed] [--note <text>] [--json]
```

`<path>` is the node's instance path, such as `plan` or `fanout/worker/2` — shown by `run show` and `workflow show`, and in the DAG view. `steer` injects text into a running node the same way steering in the DAG view, below, does. `interrupt` sends an escape to stop the node's current turn without ending the node. Both need the node to hold a pane; a node that has not been spawned yet, or that is between attempts, answers `workflow_node_not_running` rather than accepting text nothing would receive. `restart` closes the node's pane, increments its attempt count, and respawns it from `task.md`. `node complete` and `node expand` are the two commands a node runs on itself, both authenticated by the node token already in its environment; see The node contract and Templates and expansion, above. The human default for `node show` includes the node's blocker as `blocker:`/`resume:` lines — reason and resume condition — for a node that has entered `needs_attention`, and, when this node has proposed into a guardrail, a `growth_limited:` line naming the guardrail, its value, and the requested/accepted counts (`growth_limited: max_nodes reached at 14:22 UTC (2 of 4 accepted)`), alongside `path`/`label`/`status`/`model`/`effort`/`pane_id`, plus a `transcript:` line saying whether the node's session transcript is still on disk and a `restored from:` line when the node was seeded from a past run. `node interrogate` prints the interrogation's pane id and whether it resumed the original session or reconstructed one — see Interrogating a past node, above.

## The DAG view

Open a run's DAG view from the Karvex TUI to watch it execute live: node boxes laid out by graph layer, edges drawn between them, and a detail strip for whichever node is selected showing its status, model, usage, last checkpoint summary, and any blocker.

Open it with `prefix+shift+F`, or from the global menu — the launcher at the bottom of the sidebar — and pick **workflow dag**. The menu entry appears only while this server is executing a run, since there is otherwise no graph to draw. The key is more forgiving: with no run to show, `prefix+shift+F` falls through to the workflow launcher instead of dead-ending there, since starting a run is the obvious next step from "there is nothing to view yet." It only reports `no workflow run on this server — start one with kvx workflow run start` when there is nothing to launch either — no saved workflows on this server. Rebind it with `keys.open_workflow_dag`.

| Input | Action |
| --- | --- |
| `h` / `j` / `k` / `l` or the arrow keys | move the selection to the adjacent node in that direction |
| Click a node | select it, without leaving the view |
| `Enter`, or double-click a node | focus that node's pane, leaving the DAG view |
| `s` | open a steer line for the selected node; type, then `Enter` to send it as `kvx workflow node steer` |
| `i` | interrogate the selected node — fork its Claude session into a new pane |
| `Shift+I` | reconstruct a session for the selected node from its stored checkpoint, for when the original is gone |
| `Esc` (with the steer line open) | close the steer line without sending |
| `Esc` (otherwise) | leave the DAG view |
| Move the mouse | selection follows the pointer |

`i` and `Shift+I` are two keys rather than one key pressed twice: opening a session that is *not* the original teammate is always an explicit choice, so when `i` answers `transcript unavailable` the notice tells you `Shift+I` will reconstruct one, and nothing happens until you ask. Interrogation panes are drawn in their own lane below the graph — a `⌕` box per interrogation, teal while live and dimmed once it ends — rather than as nodes, because an interrogation is not part of the run. Selecting one focuses its pane.

A run opened from history is read-only: the footer drops the hints for what it cannot do, `s` reports that a past run is not the active run, and `Enter` focuses a pane only for nodes that still have one. Restored nodes have none by construction, and so does the summariser once it has closed.

Nodes created by an accepted expand proposal appear in the graph as they are created, laid out by the edges they inherited rather than by their generation number. When a proposal is refused or truncated, a banner across the top of the view names the guardrail and the requested/accepted counts, and the node that proposed carries the same notice in its box — so the run says what it was not allowed to do, not only what it did.

The end-of-run summariser appears in the graph like any other node, labelled `summary`, and the run's status line says where it is: `· summarising…` while it works, `· summary failed` if it gave up. The run's own status beside it does not change either way.

The view is a read-only projection of the run: node status, position, and edges all come from the same run graph the CLI and JSON API report. Focusing a node's pane goes through the same path as focusing any other pane in Karvex, so leaving the DAG view leaves you looking at the teammate you selected.

### The run browser

`prefix+shift+B` opens the **run browser**: every run this server knows about, newest first, across every workflow — not only the one executing now. Rebind it with `keys.open_workflow_runs`.

Each row carries the run's status glyph, its workflow's name, its tier, when it started, and its `done/total`, plus a marker when it has a summary. Runs whose history has been pruned still appear, dimmed and tagged `pruned`, built from the summary that outlived them. The detail strip below the list shows the selected run's args, limits, and failure or blocker line, together with its summary's outcome and first highlight; for a pruned run it shows the summary text and the fixed line `history pruned — restore and interrogation unavailable`, so a row that cannot be acted on says why.

| Input | Action |
| --- | --- |
| `↑` / `↓` (or `j` / `k`) | move the selection |
| `Enter` | open the selected run in the DAG view — live if it is still running, read-only from history otherwise |
| `r` | restore that run into a new run: every restorable node, behind a confirmation (`Enter` starts it, `Esc` backs out) |
| `Esc` | close the browser |

`r` is restore-all with a confirm; per-node restore is `--restore` on the CLI. It is unavailable — with the reason on screen — for a pruned run, and while another run is in flight, since Karvex executes one run at a time. Per-node interrogation deliberately lives in the DAG view rather than here, on the node it is about.
